Fixed stuff (invite delay, inviter z-index, event invites panel)
* Fixed faulty read-only event logic

Loading a schedule with no events caused a null pointer error since
`eventObj` wouldn't exist. This takes makes it so that deleting an event
just depends on whether .sch-evnt-close is visible - which it isn't while
viewing other people's schedules.

* Reduced delay while inviting people to events

This just makes the event invite invitation asynchronous (it uses ActiveJob).
I think the other possible major speed up here would be letting the client
handle rendering instead of Rails templates.

* Fixed groups member invite dropdown z-index

* Added interactivity (adding & deleting) to event invites panel

* Added privacy to created event invite category

* Added hosted event privacy restriction

* Fixed event invites association & controller bug

* Fixed overlay not closing

* Modified deleteEventInvite to use the server response

* Added comment to scheduler to_json

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -497,3 +497,7 @@ body {
     }
   }
 }
+
+.token-input-dropdown {
+  z-index: 1001;
+}
